# tradu

./: .gitignore  Cargo.toml  LICENSE  README.md  tradu.sample.yml
.github/workflows/: build.yml  rust.yml
src/: deepl.rs  main.rs
