[package]
name = "tradu"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple command to traslate using DeepL"
homepage = "https://atareao.es/"
repository = "https://github.com/atareao/tradu"
readme = "README.md"
keywords = ["translations"]
cateories = ["command-line.utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
dirs = "5.0.1"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
